<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <TextView
        android:id="@+id/tv_name_field"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/name"
        app:layout_constraintBottom_toTopOf="@id/button_event"
        app:layout_constraintEnd_toStartOf="@id/tv_name_separator"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/tv_name_separator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:text="@string/name_separator"
        app:layout_constraintBottom_toBottomOf="@id/tv_name_field"
        app:layout_constraintEnd_toStartOf="@id/tv_name"
        app:layout_constraintStart_toEndOf="@id/tv_name_field"
        app:layout_constraintTop_toTopOf="@id/tv_name_field" />


    <TextView
        android:id="@+id/tv_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        app:layout_constraintBottom_toBottomOf="@id/tv_name_field"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_name_separator"
        app:layout_constraintTop_toTopOf="@id/tv_name_field"
        tools:text="@tools:sample/full_names" />


    <Button
        android:textAllCaps="false"
        android:id="@+id/button_event"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="64dp"
        android:text="@string/select_event"
        app:layout_constraintBottom_toBottomOf="@id/button_guest"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_name_field" />

    <Button
        android:id="@+id/button_guest"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/select_guest"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_event" />

</androidx.constraintlayout.widget.ConstraintLayout>